--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,6 @@
  *     limitations under the License.
  */
 
-
 plugins {
     id 'java'
     id 'base'
@@ -29,6 +28,11 @@ plugins {
     id 'net.researchgate.release' version '2.6.0'
 }
 
+version = '1.0.0-SNAPSHOT'
+
+description = 'jlib array utilities'
+ext.detailedDescription = 'jlib utilities related to arrays'
+
 apply from: 'jlib.gradle'
 
 repositories {
@@ -36,6 +40,5 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.jlib:jlib-exception:1.0.0-SNAPSHOT'
-    implementation 'org.jlib:jlib-iterator:1.0.0-SNAPSHOT'
+    implementation 'org.jlib:jlib-iterable:1.0.0-SNAPSHOT'
 }
